--- a/extract.ipynb
+++ b/extract.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.connect('omnivore.db')\n",
+    "\n",
+    "# Create a cursor object to execute SQL commands\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Create the Article Table \n",
+    "cursor.execute('''CREATE TABLE IF NOT EXISTS articles (\n",
+    "                    id TEXT nullable,\n",
+    "                    read BOOLEAN,\n",
+    "                    time_added TEXT,\n",
+    "                    tags TEXT, \n",
+    "                    href TEXT PRIMARY KEY \n",
+    "                )''')\n",
+    "\n",
+    "cursor.execute('''CREATE TABLE IF NOT EXISTS tags (\n",
+    "                    id TEXT nullable,\n",
+    "                    name TEXT PRIMARY KEY\n",
+    "                )''')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "insert_tag_sql = f\"\"\"INSERT OR IGNORE into tags (name) values (?)\"\"\"\n",
+    "cursor.executemany(insert_tag_sql, [(label,) for label in labels])\n",
+    "\n",
+    "insert_article_sql = f\"INSERT OR IGNORE into articles (read, time_added, href, tags) values (?,?,?,?)\"\n",
+    "article_values = [(article['read'], article['time_added'].isoformat(), article['href'], json.dumps(article['tags'])) for article in articles]\n",
+    "cursor.executemany(insert_article_sql, article_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "with requests.get(SCHEMA_URL) as r:\n",
+    "    r.raise_for_status()\n",
+    "    schema = r.text\n",
+    "\n",
+    "    assert schema is not None\n",
+    "\n",
+    "print(schema[:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
